--- a/app/admin/dashboard/components/chatbot.html
+++ b/app/admin/dashboard/components/chatbot.html
@@ -460,7 +460,7 @@
       <button>➤</button>
     </div>
     <div id="chat-widget-icon">
-      <img src="https://cdn-icons-png.flaticon.com/512/7568/7568479.png" alt="Chat Bot" width="40" height="40"/>
+      <img src="https://firebasestorage.googleapis.com/v0/b/ai-language-tutor-55977.appspot.com/o/widget-assets%2F1756899146446_6F0988B2-1680-4450-B028-0D6DBD3312B0.jpeg?alt=media&token=c66667bf-f53e-4b94-9af2-193cef0944b3" alt="Chat Bot" width="40" height="40"/>
     </div>
   `;
         document.body.appendChild(widget);
